fdo#49708 when there is no Primary Key, there is no Primay Key

As opposed to a primary key with empty name and no columns (!)

Change-Id: I78ca185947a0e8d37bac64bd50add155afaeed47